name:           Test
version:        0.1.0.0
author:         Christian Kjaer Laustsen
maintainer:     ckl@codetalk.io
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

executable frontend
  main-is: Main.hs
  hs-source-dirs: .
  build-depends: base
  default-language: Haskell2010
